# chinarxiv-mcp-server

./: README.md  pyproject.toml
src/chinarxiv_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/chinarxiv_mcp_server/tools/: __init__.py  download.py  list_papers.py  read_paper.py  search.py
